fix bugs
1. the original player and the html5 player will not overlap any more
when switching too fast
2. resize the channel bar when the window resize.
3. the original player will not dislocation when switch from html5
player to original player.
4. fix some display details

--- a/static/style/player.scss
+++ b/static/style/player.scss
@@ -7,6 +7,7 @@
 		width: $player_width;
 		height: $img_size;
 		margin: 40px auto;
+		-webkit-user-select: none;
 		
 		a{
 			color: #53AD53;
